# controller/accountController.js
@@ -1,15 +1,8 @@
 const accountServices = require("../services/accountServices");
 
 const register = async (req, res, next) => {
-        /* 	#swagger.tags = ['Account']
-        #swagger.description = 'Endpoint to sign in a specific user' */
-
-        /*	#swagger.parameters['obj'] = {
-            in: 'body',
-            description: 'Account infor.',
-            required: true,
-            schema: { $ref: "#/definitions/Account" }
-        } */
+    /* 	#swagger.tags = ['Account']
+        #swagger.description = 'Sign up a specific account' */
 
     console.log("---Called /register---");
     // Save new account to DB
@@ -32,19 +25,15 @@ const register = async (req, res, next) => {
 
 const loginOTP = async (req, res) => {
     /* 	#swagger.tags = ['Account']
-        #swagger.description = 'Endpoint to sign in a specific user' */
+        #swagger.description = 'Sign in a specific user to get OTP login' */
 
-        /*	#swagger.parameters['obj'] = {
-            in: 'body',
-            description: 'Account infor.',
-            required: true,
-            schema: { $ref: "#/definitions/Account" }
+    /*	#swagger.parameters['obj'] = {
+        in: 'body',
+        description: 'Account infor.',
+        required: true,
+        schema: { $ref: "#/definitions/Account" }
     } */
-
     console.log("---Called /login---");
-    console.log("---login req = ---");
-    console.log(JSON.stringify(req.body));
-    
     const otp = await accountServices.generateOTP();
     req.session.otp = otp;
     req.session.email = req.body.email;
@@ -60,23 +49,47 @@ const loginOTP = async (req, res) => {
  * @returns 
  */
 const getTokenLogin = (req, res) => {
+    /* 	#swagger.tags = ['Account']
+        #swagger.description = 'Get login Token for email signed in and OTP provided' */
+
+    /*	#swagger.parameters['obj'] = {
+        in: 'body',
+        description: 'Account infor.',
+        required: true,
+        schema: { $ref: "#/definitions/getTokenLogin" }
+    } */
+
     console.log("---Called /loginToken---");
     // Generate token - expired in 60 seconds
     const token = accountServices.generateToken(req.body.email);
     // Set token to session
     req.session.tokenLogin = token;
+    /* #swagger.responses[200] = { description: 'Login successful' } */
     return res.status(200).send('You has been logged in!');
 };
 
+/**
+ * Generate link to reset password
+ * @param {*} req 
+ * @param {*} res 
+ */
 const forgotPassword = async (req, res) => {
+    /* 	#swagger.tags = ['Account']
+        #swagger.description = 'Enter email for resetting password' */
     // Create link with token provided
     const resetPassURL = await accountServices.generateURLForgetPassword(req.body.email, req.protocol, req.get('host'));
-    // Return link to response
+    /* #swagger.responses[200] = { description: 'Return reset password URL with token' } */
     res.status(200).send(resetPassURL);
 };
 
+/**
+ * Create new password
+ * @param {*} req 
+ * @param {*} res 
+ */
 const resetPassword = async (req, res) => {
-    console.log("---Called /resetPassword---");
+    /* 	#swagger.tags = ['Account']
+        #swagger.description = 'Create new password' */
     try {
         // Update password for account with email send
         const result = await accountServices.resetPassword(
@@ -84,6 +97,7 @@ const resetPassword = async (req, res) => {
             req.body.newPassword
         )
         if (result == 1) {
+            /* #swagger.responses[200] = { description: 'Create new password successful' } */
             res.status(200).send('Your password has been updated!');
         }
     } catch (error) {
@@ -94,19 +108,43 @@ const resetPassword = async (req, res) => {
 };
 
 const testGetToken = (req, res) => {
+    /* 	#swagger.tags = ['Testing']
+        #swagger.description = 'Test API with login required' */
     console.log("---Called /TestgetToken---");
     res.send(" ---getToken ---");
 };
 
+/**
+ * Update account profile
+ * @param {*} req 
+ * @param {*} res 
+ */
 const updateProfile = async (req, res) => {
+    /* 	#swagger.tags = ['Account']
+        #swagger.description = 'Update account profile' */
+
+    /*	#swagger.parameters['Avatar Image'] = {
+            in: 'formData',
+            type: 'file',
+            description: 'Some description...',
+        }
+
+        #swagger.parameters['obj'] = {
+            in: 'body',
+            description: 'Profile information.',
+            schema: { $ref: "#/definitions/updateProfile" }
+        } */
     console.log("---Called /updateProfile---");
     try {
         const result = await accountServices.updateProfile(req);
 
-        if (result == 1) {
-            res.status(200).send('Your profile has been updated!');
-        }
+        // if (result == 1) {
+            
+        // }
+        /* #swagger.responses[200] = { description: 'Update profile successful' } */
+        res.status(200).send('Your profile has been updated!');
     } catch (error) {
+        /* #swagger.responses[500] = { description: '' } */
         res.status(500).send({
             message: "Error when update profile for account " + req.email,
             error: error
@@ -120,6 +158,8 @@ const tmpFunction = (req, res) => {
 };
 
 const testApi = (req, res) => {
+    /* 	#swagger.tags = ['Testing']
+        #swagger.description = 'Test API' */
     console.log("---Called /testApi---");
     res.status(200).send(" ---testApi Called ---");
 };
