# swagger-output.json
@@ -28,23 +28,12 @@
     "application/json"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/account/register": {
       "post": {
         "tags": [
           "Account"
         ],
-        "description": "Endpoint to sign in a specific user",
+        "description": "Sign up a specific account",
         "parameters": [
           {
             "name": "obj",
@@ -64,7 +53,7 @@
             }
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid email or password"
           },
           "500": {
             "description": "Internal Server Error"
@@ -77,7 +66,7 @@
         "tags": [
           "Account"
         ],
-        "description": "Endpoint to sign in a specific user",
+        "description": "Sign in a specific user to get OTP login",
         "parameters": [
           {
             "name": "obj",
@@ -94,7 +83,7 @@
             "description": "OK"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid email or password"
           },
           "401": {
             "description": "Unauthorized"
@@ -107,33 +96,30 @@
     },
     "/account/getTokenLogin": {
       "post": {
-        "description": "",
+        "tags": [
+          "Account"
+        ],
+        "description": "Get login Token for email signed in and OTP provided",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Account infor.",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "otp": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/getTokenLogin"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Login successful"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid email or OTP"
           },
           "404": {
-            "description": "Not Found"
+            "description": "OTP or account not found || OTP expired"
           },
           "500": {
             "description": "Internal Server Error"
@@ -141,26 +127,12 @@
         }
       }
     },
-    "/account/testGetToken": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          }
-        }
-      }
-    },
     "/account/forgotPassword": {
       "post": {
-        "description": "",
+        "tags": [
+          "Account"
+        ],
+        "description": "Enter email for resetting password",
         "parameters": [
           {
             "name": "body",
@@ -177,17 +149,20 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Return reset password URL with token"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid email"
           }
         }
       }
     },
     "/account/resetPassword/{token}": {
       "post": {
-        "description": "",
+        "tags": [
+          "Account"
+        ],
+        "description": "Create new password",
         "parameters": [
           {
             "name": "token",
@@ -213,13 +188,13 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Create new password successful"
           },
           "400": {
             "description": "Bad Request"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized token"
           },
           "500": {
             "description": "Internal Server Error"
@@ -229,17 +204,35 @@
     },
     "/account/updateProfile": {
       "put": {
-        "description": "",
-        "parameters": [],
+        "tags": [
+          "Account"
+        ],
+        "description": "Update account profile",
+        "parameters": [
+          {
+            "name": "Avatar Image",
+            "in": "formData",
+            "type": "file",
+            "description": "Some description..."
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Profile information.",
+            "schema": {
+              "$ref": "#/definitions/updateProfile"
+            }
+          }
+        ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Update profile successful"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized or expired token"
           },
           "403": {
-            "description": "Forbidden"
+            "description": "Token is not provided"
           },
           "500": {
             "description": "Internal Server Error"
@@ -247,9 +240,32 @@
         }
       }
     },
+    "/account/testGetToken": {
+      "get": {
+        "tags": [
+          "Testing"
+        ],
+        "description": "Test API with login required",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized or expired token"
+          },
+          "403": {
+            "description": "Token is not provided"
+          }
+        }
+      }
+    },
     "/account/testApi": {
       "get": {
-        "description": "",
+        "tags": [
+          "Testing"
+        ],
+        "description": "Test API",
         "parameters": [],
         "responses": {
           "200": {
@@ -260,7 +276,10 @@
     },
     "/activity/postStatus": {
       "post": {
-        "description": "",
+        "tags": [
+          "Activity"
+        ],
+        "description": "Post new status",
         "parameters": [
           {
             "name": "body",
@@ -277,16 +296,19 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created New Status"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized or expired token"
           },
           "403": {
-            "description": "Forbidden"
+            "description": "Token is not provided"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Account commented Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -296,7 +318,10 @@
     },
     "/activity/addComment": {
       "post": {
-        "description": "",
+        "tags": [
+          "Activity"
+        ],
+        "description": "Add a new comment",
         "parameters": [
           {
             "name": "body",
@@ -316,19 +341,19 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created new comment"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid comment input"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized or expired token"
           },
           "403": {
-            "description": "Forbidden"
+            "description": "Token is not provided"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Status or commenter not found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -338,7 +363,10 @@
     },
     "/activity/reactStatus": {
       "post": {
-        "description": "",
+        "tags": [
+          "Activity"
+        ],
+        "description": "Like/Unlike a status",
         "parameters": [
           {
             "name": "body",
@@ -355,19 +383,19 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Like/Unlike successful"
           },
           "400": {
             "description": "Bad Request"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized or expired token"
           },
           "403": {
-            "description": "Forbidden"
+            "description": "Token is not provided"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Account reactor Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -377,7 +405,10 @@
     },
     "/activity/addFriend": {
       "post": {
-        "description": "",
+        "tags": [
+          "Activity"
+        ],
+        "description": "Add a friend",
         "parameters": [
           {
             "name": "body",
@@ -400,13 +431,13 @@
             "description": "Bad Request"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized or expired token"
           },
           "403": {
-            "description": "Forbidden"
+            "description": "Token is not provided"
           },
           "404": {
-            "description": "Not Found"
+            "description": "User Account or Friend Account Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -416,7 +447,10 @@
     },
     "/activity/timeline": {
       "get": {
-        "description": "",
+        "tags": [
+          "Activity"
+        ],
+        "description": "Timeline of friend activity",
         "parameters": [
           {
             "name": "limit",
@@ -434,10 +468,10 @@
             "description": "Created"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized or expired token"
           },
           "403": {
-            "description": "Forbidden"
+            "description": "Token is not provided"
           },
           "404": {
             "description": "Not Found"
@@ -450,20 +484,26 @@
     },
     "/activity/report": {
       "get": {
-        "description": "",
+        "tags": [
+          "Activity"
+        ],
+        "description": "Get report of account activity pass a week",
         "parameters": [],
         "responses": {
           "201": {
             "description": "Created"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized or expired token"
           },
           "403": {
-            "description": "Forbidden"
+            "description": "Token is not provided"
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -492,7 +532,7 @@
         },
         "email": {
           "type": "string",
-          "example": "testNewAccount@gmail.com"
+          "example": "youremail@gmail.com"
         },
         "password": {
           "type": "string",
@@ -509,6 +549,44 @@
         "createdAt": {
           "type": "string",
           "example": "2023-04-24T17:49:11.243Z"
+        }
+      }
+    },
+    "getTokenLogin": {
+      "type": "object",
+      "properties": {
+        "otp": {
+          "type": "string",
+          "example": "TEST2OTP"
+        },
+        "email": {
+          "type": "string",
+          "example": "youremail@gmail.com"
+        }
+      }
+    },
+    "updateProfile": {
+      "type": "object",
+      "properties": {
+        "fullName": {
+          "type": "string",
+          "example": "your name"
+        },
+        "birthday": {
+          "type": "string",
+          "example": "1992-10-16"
+        },
+        "job": {
+          "type": "string",
+          "example": "your job"
+        },
+        "address": {
+          "type": "string",
+          "example": "your address"
+        },
+        "gender": {
+          "type": "string",
+          "example": "your gender"
         }
       }
     }
